# HDMR

./: README.md  meson.build  pyproject.toml
hdmr_viewer/: harris.py  video.py  viewer.py
include/: gauss.hh  harris.hh  img_utils.hh
src/: gauss.cpp  harris.cpp  harris.cu  hdmr.cpp  img_utils.cpp  meson.build
