[tool.poetry]
name = "hdmr_viewer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.22.3"
opencv-python = "^4.5.5"
matplotlib = "^3.5.2"
scipy = "^1.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
detect_points = "hdmr_viewer.viewer:main"
